# se-vending-machine-tracking-app

./: .env  .gitignore  README.md  app.py  docker-compose.yaml  extensions.py  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.github/workflows/: sast.yml  test.yml
models/: __init__.py  model_stock.py  model_vending_machine.py  vending_machine.py
routes/: create.py  delete.py  routes_stock.py  routes_vending_machine.py  view.py
services/: __init__.py  services_vending_machine.py  utils.py
tests/routes_stocks/: __init__.py  test_add_item.py  test_delete_item.py  test_edit_item.py  test_view_item.py
tests/routes_vending_machine/: __init__.py  create.py  delete.py  edit.py  test_create_machine.py  test_delete_machine.py  test_edit_machine.py  test_view_machine.py
vending-machine-backend/: app.py
