[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Khwanchanok Chaichanayothinwatcahra <khwanchanok.chc@student.mahidol.edu>"]

[tool.poetry.dependencies]
python = ">3.7"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
